import { ILogoutable } from '../Login/ILogoutable'
import { ILoginable } from '../Login/ILoginable'

export interface IClient extends ILoginable, ILogoutable {}
