export interface ILogoutable {
  logout(): Promise<boolean>
}
