export type LoginCredentials = {
  username: string
  password: string
}

export default LoginCredentials
